cabal-version:       3.0
name:                hobbesbuild
version:             0.1.0.0
license-file:        LICENSE
author:              Providence Salumu
maintainer:          providence.salumu@smunix.com
extra-source-files:  CHANGELOG.md

executable hobbesbuild
  main-is:             Shakefile.hs
  build-depends:       base ^>=4.14.1.0
                     , shake
                     , shake-language-c
  default-language:    Haskell2010
