name:                mcmove
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/morganstanley/hobbes#readme
license:             BSD3
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
copyright:           BSD3
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable mcmove
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , inline-c
                     , inline-c-cpp
                     , shared-memory
