cabal-version:       3.0
name:                mcmove
version:             0.1.0.0
homepage:            https://github.com/morganstanley/hobbes#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Providence Salumu
maintainer:          Providence.Salumu@smunix.com
copyright:           BSD3
category:            Web
build-type:          Simple
extra-source-files:  README.md

executable mcmove
  default-extensions:  BlockArguments
                       OverloadedStrings
                       RankNTypes
                       TypeApplications                                                            
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  cxx-options: -std=c++14 -g -O2
  ghc-options: -pgmc=g++
  ld-options: -lhobbes-dyn
  extra-libraries: hobbes
  build-depends:       base
                     , bytestring
                     , inline-c
                     , inline-c-cpp
                     , shared-memory
